[package]
name = "nox_lib"
version = "0.1.0"
edition = "2021"

license-file = "LICENSE.txt"
description = "A general purpose library filled with nicknacks to help you out"
homepage = ""
documentation = ""
repository = ""
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"